src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_mkldnn_max_pool3d_backward(value grad_output, value output, value input, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_mkldnn_max_pool3d_backward_out(value out, value grad_output, value output, value input, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_mkldnn_max_pool3d_out(value out, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_mkldnn_reorder_conv2d_weight(value self, value padding, value stride, value dilation, int64_t groups, value input_size);
value atg_mkldnn_reorder_conv2d_weight_out(value out, value self, value padding, value stride, value dilation, int64_t groups, value input_size);
value atg_mkldnn_reorder_conv3d_weight(value self, value padding, value stride, value dilation, int64_t groups, value input_size);
value atg_mkldnn_reorder_conv3d_weight_out(value out, value self, value padding, value stride, value dilation, int64_t groups, value input_size);
value atg_mkldnn_rnn_layer(value input, value weight0, value weight1, value weight2, value weight3, value hx_, value cx_, int reverse, value batch_sizes, int64_t mode, int64_t hidden_size, int64_t num_layers, int has_biases, int bidirectional, int batch_first, int train);
value atg_mkldnn_rnn_layer_backward(value input, value weight1, value weight2, value weight3, value weight4, value hx_, value cx_tmp, value output, value hy_, value cy_, value grad_output, value grad_hy, value grad_cy, int reverse, int64_t mode, int64_t hidden_size, int64_t num_layers, int has_biases, int train, int bidirectional, value batch_sizes, int batch_first, value workspace);
value atg_mkldnn_rnn_layer_backward_out(value out0, value out1, value out2, value out3, value out4, value out5, value out6, value input, value weight1, value weight2, value weight3, value weight4, value hx_, value cx_tmp, value output, value hy_, value cy_, value grad_output, value grad_hy, value grad_cy, int reverse, int64_t mode, int64_t hidden_size, int64_t num_layers, int has_biases, int train, int bidirectional, value batch_sizes, int batch_first, value workspace);
value atg_mkldnn_rnn_layer_out(value out0, value out1, value out2, value out3, value input, value weight0, value weight1, value weight2, value weight3, value hx_, value cx_, int reverse, value batch_sizes, int64_t mode, int64_t hidden_size, int64_t num_layers, int has_biases, int bidirectional, int batch_first, int train);
value atg_mm(value self, value mat2);
value atg_mm_out(value out, value self, value mat2);
value atg_mode(value self, int64_t dim, int keepdim);
value atg_mode_values(value values, value indices, value self, int64_t dim, int keepdim);
value atg_moveaxis(value self, value source, value destination);
value atg_moveaxis_int(value self, int64_t source, int64_t destination);
value atg_movedim(value self, value source, value destination);
value atg_movedim_int(value self, int64_t source, int64_t destination);
value atg_mse_loss(value self, value target, int64_t reduction);
value atg_mse_loss_backward(value grad_output, value self, value target, int64_t reduction);
value atg_mse_loss_backward_grad_input(value grad_input, value grad_output, value self, value target, int64_t reduction);
value atg_mse_loss_out(value out, value self, value target, int64_t reduction);
value atg_msort(value self);
value atg_msort_out(value out, value self);
value atg_mt(value self);
value atg_mul(value self, value other);
value atg_mul_(value self, value other);
value atg_mul_out(value out, value self, value other);
value atg_mul_scalar(value self, value other);
value atg_mul_scalar_(value self, value other);
value atg_mul_scalar_out(value out, value self, value other);
value atg_multi_margin_loss_backward(value grad_output, value self, value target, value p, value margin, value weight, int64_t reduction);
value atg_multi_margin_loss_backward_grad_input(value grad_input, value grad_output, value self, value target, value p, value margin, value weight, int64_t reduction);
value atg_multilabel_margin_loss(value self, value target, int64_t reduction);
value atg_multilabel_margin_loss_backward(value grad_output, value self, value target, int64_t reduction, value is_target);
value atg_multilabel_margin_loss_backward_grad_input(value grad_input, value grad_output, value self, value target, int64_t reduction, value is_target);
value atg_multilabel_margin_loss_out(value out, value self, value target, int64_t reduction);
value atg_multinomial(value self, int64_t num_samples, int replacement);
value atg_multinomial_out(value out, value self, int64_t num_samples, int replacement);
value atg_multiply(value self, value other);
value atg_multiply_(value self, value other);
value atg_multiply_out(value out, value self, value other);
value atg_multiply_scalar(value self, value other);
value atg_multiply_scalar_(value self, value other);
value atg_mv(value self, value vec);
value atg_mv_out(value out, value self, value vec);
value atg_mvlgamma(value self, int64_t p);
value atg_mvlgamma_(value self, int64_t p);
value atg_mvlgamma_out(value out, value self, int64_t p);
value atg_nan_to_num(value self, value nan, value posinf, value neginf);
value atg_nan_to_num_(value self, value nan, value posinf, value neginf);
value atg_nan_to_num_out(value out, value self, value nan, value posinf, value neginf);
value atg_nanmean(value self, value dim, int keepdim, int dtype);
value atg_nanmean_out(value out, value self, value dim, int keepdim, int dtype);
value atg_nanmedian(value self);
value atg_nanmedian_dim(value self, int64_t dim, int keepdim);
value atg_nanmedian_dim_values(value values, value indices, value self, int64_t dim, int keepdim);
value atg_nanmedian_out(value out, value self);