src/bindings/torch_bindings_generated5.ml


  let stubs_mkldnn_max_pool3d_backward =
    foreign
      "atg_mkldnn_max_pool3d_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_max_pool3d_backward_out =
    foreign
      "atg_mkldnn_max_pool3d_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_max_pool3d_out =
    foreign
      "atg_mkldnn_max_pool3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_reorder_conv2d_weight =
    foreign
      "atg_mkldnn_reorder_conv2d_weight"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_reorder_conv2d_weight_out =
    foreign
      "atg_mkldnn_reorder_conv2d_weight_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_reorder_conv3d_weight =
    foreign
      "atg_mkldnn_reorder_conv3d_weight"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_reorder_conv3d_weight_out =
    foreign
      "atg_mkldnn_reorder_conv3d_weight_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_mkldnn_rnn_layer =
    foreign
      "atg_mkldnn_rnn_layer"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_mkldnn_rnn_layer_backward =
    foreign
      "atg_mkldnn_rnn_layer_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_mkldnn_rnn_layer_backward_out =
    foreign
      "atg_mkldnn_rnn_layer_backward_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_mkldnn_rnn_layer_out =
    foreign
      "atg_mkldnn_rnn_layer_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_mm = foreign "atg_mm" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_mm_out =
    foreign "atg_mm_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mode =
    foreign
      "atg_mode"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> returning void)
  ;;

  let stubs_mode_values =
    foreign
      "atg_mode_values"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_moveaxis =
    foreign
      "atg_moveaxis"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_moveaxis_int =
    foreign "atg_moveaxis_int" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_movedim =
    foreign
      "atg_movedim"
      (gc_tensor @-> ptr int64_t @-> int @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_movedim_int =
    foreign "atg_movedim_int" (gc_tensor @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_mse_loss =
    foreign "atg_mse_loss" (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_mse_loss_backward =
    foreign
      "atg_mse_loss_backward"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_mse_loss_backward_grad_input =
    foreign
      "atg_mse_loss_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_mse_loss_out =
    foreign
      "atg_mse_loss_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_msort = foreign "atg_msort" (gc_tensor @-> returning raw_tensor)

  let stubs_msort_out =
    foreign "atg_msort_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mt = foreign "atg_mt" (gc_tensor @-> returning raw_tensor)
  let stubs_mul = foreign "atg_mul" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  let stubs_mul_ = foreign "atg_mul_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_mul_out =
    foreign "atg_mul_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mul_scalar =
    foreign "atg_mul_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_mul_scalar_ =
    foreign "atg_mul_scalar_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_mul_scalar_out =
    foreign
      "atg_mul_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_multi_margin_loss_backward =
    foreign
      "atg_multi_margin_loss_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_multi_margin_loss_backward_grad_input =
    foreign
      "atg_multi_margin_loss_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_multilabel_margin_loss =
    foreign
      "atg_multilabel_margin_loss"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_multilabel_margin_loss_backward =
    foreign
      "atg_multilabel_margin_loss_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_multilabel_margin_loss_backward_grad_input =
    foreign
      "atg_multilabel_margin_loss_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_multilabel_margin_loss_out =
    foreign
      "atg_multilabel_margin_loss_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_multinomial =
    foreign "atg_multinomial" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_multinomial_out =
    foreign
      "atg_multinomial_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_multiply =
    foreign "atg_multiply" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_multiply_ =
    foreign "atg_multiply_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_multiply_out =
    foreign
      "atg_multiply_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_multiply_scalar =
    foreign "atg_multiply_scalar" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_multiply_scalar_ =
    foreign "atg_multiply_scalar_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_mv = foreign "atg_mv" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_mv_out =
    foreign "atg_mv_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mvlgamma =
    foreign "atg_mvlgamma" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_mvlgamma_ =
    foreign "atg_mvlgamma_" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_mvlgamma_out =
    foreign
      "atg_mvlgamma_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_nan_to_num =
    foreign
      "atg_nan_to_num"
      (gc_tensor
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;
end

module C1 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_nan_to_num_ =
    foreign
      "atg_nan_to_num_"
      (gc_tensor
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_nan_to_num_out =
    foreign
      "atg_nan_to_num_out"
      (gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_nanmean =
    foreign
      "atg_nanmean"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_nanmean_out =
    foreign
      "atg_nanmean_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_nanmedian = foreign "atg_nanmedian" (gc_tensor @-> returning raw_tensor)

  let stubs_nanmedian_dim =
    foreign
      "atg_nanmedian_dim"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> returning void)
  ;;

  let stubs_nanmedian_dim_values =
    foreign
      "atg_nanmedian_dim_values"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_nanmedian_out =
    foreign "atg_nanmedian_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;
